criando as extensoes, acessando a pagina de extensao e criando construtores

--- a/src/pages/Content/Extensions/Extensions.scss
+++ b/src/pages/Content/Extensions/Extensions.scss
@@ -1,3 +1,15 @@
+.content{
+    display:flex;
+    flex-direction: column;
+}
+
+.menu-busca{
+    display:flex;
+    justify-content: center;
+    gap: 10px;
+    font: 400 16px 'Roboto', sans-serif;
+}
+
 .caption{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
