--- a/src/pages/Content/Form/Form.scss
+++ b/src/pages/Content/Form/Form.scss
@@ -26,6 +26,7 @@
             padding: 0 16px;
             background: #fff;
             border: 1px solid #ccc;
+            margin: 10px 10px;
         }
 
         button {
@@ -57,11 +58,19 @@
 
 .input-select{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     font: 400 16px 'Roboto', sans-serif;
-    // justify-content:space-around;
-    // width: none;
+   
     >select {
-        display: flex;
-        width: 100px;
+        width: 200px;
+        height: 50px;
+        justify-content: center;
+        // background: #835afd;
+        // color: #fff;
+        font: 400 16px 'Roboto', sans-serif;
+        align-self: center;
+        border-radius: 8px;
+        text-align: center;
     }
 }
