--- a/src/pages/Content/Layout/Card.scss
+++ b/src/pages/Content/Layout/Card.scss
@@ -18,7 +18,7 @@
     margin: 10px;
     flex: 1;
     color: #000;
-    font-size: 18px;
+    font: 400 4px 'Roboto', sans-serif;
 }
 
 .Card .Label{
