mostrando todas as informacoes das extensoes

--- a/src/pages/Content/Extension/Extension.scss
+++ b/src/pages/Content/Extension/Extension.scss
@@ -1,19 +1,10 @@
-.cardextension{
-    weight: 100%;
+.content{
+    display: flex;
+    flex-direction: column;
+   
 }
 
-.extension{
-    display: grid;
-   grid-template-columns: 1fr 1fr;
-   gap: 30px 60px;
-
-    >div{
-        display: flex;
-
-        >span{
-            font-weight: bold;
-        }
-    }
-
-    
+.Cards{
+    display: flex;
+    flex-wrap: wrap;
 }
