--- a/src/pages/Content/Form/Form.scss
+++ b/src/pages/Content/Form/Form.scss
@@ -56,6 +56,12 @@
     }
 }
 
+
+.selects{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 .input-select{
     display: flex;
     flex-direction: column;
