--- a/src/component/button.scss
+++ b/src/component/button.scss
@@ -2,7 +2,7 @@
     height: 50px;
     border-radius: 8px;
     font-weight: 500;
-    background: #835afd;
+    background: #009ACD;
     color: #FFF;
     padding: 0 32px;
   
