--- a/src/pages/Content/Extensions/Extensions.scss
+++ b/src/pages/Content/Extensions/Extensions.scss
@@ -5,14 +5,52 @@
 .content{
     display:flex;
     flex-direction: column;
+
 }
+
+
 
 .menu-busca{
     display:flex;
     justify-content: center;
     gap: 10px;
     font: 400 16px 'Roboto', sans-serif;
+
+
 }
+
+.input-select{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font: 400 16px 'Roboto', sans-serif;
+    text-decoration: double;
+   
+    >select {
+        width: 200px;
+        height: 50px;
+        justify-content: center;
+        font: 400 16px 'Roboto', sans-serif;
+        align-self: center;
+        border-radius: 8px;
+        text-align: center;
+        padding: 4px;
+    }
+}
+
+.input-text{
+    >input{
+        height:50px;
+        border:1px solid #000!important;
+        border-radius: 8px;
+        padding: 0 16px;
+        background: #fff;
+        border: 1px solid #ccc;
+        // margin: 10px 10px;
+    }
+}
+
+
 
 .caption{
     display: grid;
