--- a/src/pages/Content/Form/Form.scss
+++ b/src/pages/Content/Form/Form.scss
@@ -1,11 +1,16 @@
+.root{
+    display:flex;
+    justify-content: center;
+}
 .main{
+    font: 400 32px 'Roboto', sans-serif;
     display: flex;
     padding: 32px 32px;
     align-items: center;
     justify-content: center;
-    margin-left: 200px;
-    margin-right: 200px;
-    border: 5px double #fff
+    max-width:1000px;
+    padding: 40px 100px;
+    border: 5px ridge #000
 
 }
 
@@ -20,19 +25,27 @@
     form {
         display: flex;
         flex-direction:column;
+        gap: 5px;
+       
+
         input{
             height:50px;
+            border:1px solid #000!important;
             border-radius: 8px;
             padding: 0 16px;
             background: #fff;
             border: 1px solid #ccc;
             margin: 10px 10px;
+            
         }
 
+
         button {
+            align-self: center;
             margin-top:16px;
             max-width: 300px;
-            justify-content: center;
+            background-color: #00008B
+            
         }
 
         button, input{
@@ -41,25 +54,10 @@
     }
 }
 
-.title{
-    display: flex;
-    
-    font: 400 32px 'Roboto', sans-serif;
-    justify-content: center;
-
-    &::before{
-
-
-    }
-    &::after{
-
-    }
-}
-
-
 .selects{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 30px;
 }
 
 .input-select{
@@ -67,16 +65,19 @@
     flex-direction: column;
     justify-content: center;
     font: 400 16px 'Roboto', sans-serif;
+    text-decoration: double;
    
     >select {
         width: 200px;
         height: 50px;
         justify-content: center;
-        // background: #835afd;
-        // color: #fff;
         font: 400 16px 'Roboto', sans-serif;
         align-self: center;
         border-radius: 8px;
         text-align: center;
     }
+}
+.button-submit{
+    display: flex;
+    justify-content: center;
 }
