--- a/src/pages/Content/Form/FormReport.scss
+++ b/src/pages/Content/Form/FormReport.scss
@@ -1,19 +1,60 @@
-.content{
+.root{
     display:flex;
-    justify-content:space-around;
+    justify-content: center;
 }
-.form-report{
+.main{
+    font: 400 32px 'Roboto', sans-serif;
     display: flex;
-    flex-direction: column;
-    width: 40%;
-}
-
-label{
-    display: flex;
-    flex-direction: column;
+    padding: 32px 32px;
     align-items: center;
+    justify-content: center;
+    max-width:1000px;
+    padding: 40px 100px;
+    border: 5px ridge #000
+
 }
 
-input{
-    height:20px;
+.form-input{
+    display:flex;
+    flex-direction:column;
+    width:100%;
+    // max-width: 600px;
+    align-items:stretch;
+    text-align: center;
+
+    form {
+        display: flex;
+        flex-direction:column;
+        gap: 5px;
+       
+
+        input{
+            height:50px;
+            border:1px solid #000!important;
+            border-radius: 8px;
+            padding: 0 16px;
+            background: #fff;
+            border: 1px solid #ccc;
+            margin: 10px 10px;
+            
+        }
+
+
+        button {
+            align-self: center;
+            margin-top:16px;
+            max-width: 300px;
+            background-color: #00008B
+            
+        }
+
+        button, input{
+            width:100%;
+        }
+    }
+}
+
+.button-submit{
+    display: flex;
+    justify-content: center;
 }
