--- a/src/pages/Content/Layout/Card.scss
+++ b/src/pages/Content/Layout/Card.scss
@@ -1,7 +1,7 @@
 .Card{
     flex: 1;
     margin: 20px;
-    border: 3px solid #000;
+    border: 4px solid #00688B;
     border-radius: 10px;
     overflow: hidden;
     background-color: #fff;
@@ -27,7 +27,7 @@
     justify-content: center;
     align-items: center;
     height: 40px;
-    background-color: #000;
+    background-color: #00688B!important;
     color: #fff;
 
 }
