--- a/src/pages/Header/Header.scss
+++ b/src/pages/Header/Header.scss
@@ -9,6 +9,10 @@
     padding: 20px;
     border-radius: 1%;
     border-bottom: 1px solid;
+    >span{
+        font: 400 32px 'Roboto', sans-serif!important;
+    }
+        
 
 }
 
