--- a/src/pages/Content/Extensions/Extensions.scss
+++ b/src/pages/Content/Extensions/Extensions.scss
@@ -48,26 +48,26 @@
     }
 }
 
-
-
 .caption{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr!important;
+    grid-template-columns: 1fr 8fr 5fr 2fr 2fr 2fr!important;
     align-items: center;
     justify-content: center;
-    margin: 10px 10px 10px;
     padding-top: 10px;
     padding-bottom: 10px;
-
+   
+    >span{
+        font-weight: bold;
+        font-size: 22px;
+        margin-right: 10px;
+    }
 }
-
 
 .extensions{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr!important;
+    grid-template-columns: 1fr 8fr 5fr 2fr 2fr 2fr!important;
     align-items: center;
     justify-content: center;
-    margin: 10px 10px 10px;
     padding-top: 10px;
     padding-bottom: 10px;
     border-top: 1px solid;
