--- a/src/pages/Content/ReportedExtension/ExtensionsReported.scss
+++ b/src/pages/Content/ReportedExtension/ExtensionsReported.scss
@@ -8,7 +8,7 @@
 
 }
 
-.caption{
+.caption-extensions-reported{
     display: grid;
     grid-template-columns: 1fr 6fr 4fr 3fr 3fr 3fr 3fr!important;
     align-items: center;
@@ -20,7 +20,7 @@
 }
 
 
-.extensions{
+.extensions-reported{
     display: grid;
     grid-template-columns: 1fr 6fr 4fr 3fr 3fr 3fr 3fr!important;
     align-items: center;
