--- a/src/pages/Content/Extension/Extension.scss
+++ b/src/pages/Content/Extension/Extension.scss
@@ -39,7 +39,7 @@
 
 .caption-constructs{
     display: grid;
-    grid-template-columns: 1fr 3fr 3fr 3fr 3fr 3fr 3fr 3fr!important;
+    grid-template-columns: 1fr 3fr 3fr 3fr 3fr 3fr!important;
     align-items: center;
     justify-content: center;
     margin: 10px 10px 10px;
@@ -56,7 +56,7 @@
 
 .constructs{
     display: grid;
-    grid-template-columns: 1fr 3fr 3fr 3fr 3fr 3fr 3fr 3fr!important;
+    grid-template-columns: 1fr 3fr 3fr 3fr 3fr 3fr!important;
     align-items: center;
     justify-content: center;
     margin: 10px 10px 10px;
